# agentable

./: .gitignore  README.md  deploy.sh  requirements.txt
.github/workflows/: deploy-backend.yml
agentable-backend/: README.md  pyproject.toml  requirements.txt
agentable-backend/src/: crew.py  main.py
agentable-backend/src/agentable_backend/: json_crew_example.py  main.py
agentable-backend/src/agentable_backend/db/: chroma.sqlite3
backend/: .env.sample  .gitignore  Dockerfile  README.md  TASK_FORMAT_COMPARISON.md  crew_file_generator.py  crew_generator.py  env.template  example_crew_usage.py  fly.toml  log.txt  main.py  requirements.txt  start.sh  test_browserbase_fix.py  test_browserbase_integration.py  test_crew_creation_mock.py  test_crew_integration.py  test_crew_spec.json  test_dalle_tool.py  test_dalle_wrapper.py  test_enhanced_system.py  test_exa_integration.py  test_generated_crew.py  test_generated_crew_spec.json  test_json_only.py  test_placeholder_detection.py  test_spec_orchestrator_integration.py
backend/agents/: spec_agent.py
backend/db/: chroma.sqlite3
backend/services/: fly_machine_launcher.py  history.py  orchestrator.py  orchestrator2.py
backend/tests/: infra_test.py  json_crew_example.py
backend/tools/: __init__.py  browserbase_wrapper.py  context_store.py  dalle_wrapper.py  google_slides_tool.py  parameterized_tool.py  slack_list_channels_tool.py  slack_resolve_channel_tool.py  slack_send_message_tool.py  slack_tool.py  tool_registry.py
frontend/: Dockerfile  fly.toml  package-lock.json  package.json
frontend/src/app/: layout.tsx  (+2 more)
(+10 files in other folders)
