[project]
name = "agentable_backend"
version = "0.1.0"
description = "agentable-backend using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
agentable_backend = "agentable_backend.main:run"
run_crew = "agentable_backend.main:run"
train = "agentable_backend.main:train"
replay = "agentable_backend.main:replay"
test = "agentable_backend.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
